<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:context="com.example.android.miwok.MainActivity">

        <!-- Introduction Section -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/items_margin"
                android:layout_marginBottom="@dimen/items_margin"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </FrameLayout>

        <!-- Numbers category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_numbers"
            android:layout_marginBottom="@dimen/items_margin"
            android:layout_marginTop="@dimen/items_margin"
            >
            <TextView
                android:id="@+id/numbers"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_numbers" />
        </FrameLayout>

        <!-- Family category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_family"
            android:layout_marginBottom="@dimen/items_margin">
            <TextView
                android:id="@+id/family"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_family" />
        </FrameLayout>

        <!-- Colors category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_colors"
            android:layout_marginBottom="@dimen/items_margin">
            <TextView
                android:id="@+id/colors"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_colors" />
        </FrameLayout>

        <!-- Phrases category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_phrases"
            android:layout_marginBottom="@dimen/items_margin">
            <TextView
                android:id="@+id/phrases"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_phrases" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>